fix(style): Transparent colors won’t work
The checkbox border overlaps the checkbox background when disabled.
Transparent colors add and create an unwanted border.

--- a/packages/styles/themes/db-green.scss
+++ b/packages/styles/themes/db-green.scss
@@ -69,6 +69,11 @@ $db-green-campaign-background-color: db-color('lightgreen400');
   --db-caret-color: #{db-color('lightgreen400')};
 
   // PRIMARY BUTTON
+  --db-primary-button-disabled-background-color: #{mix(
+      #fff,
+      $db-green-campaign-background-color,
+      20%
+    )};
   --db-primary-button-text-color: #{db-color('lightgreen400')};
   --db-primary-button-hover-text-color: #{db-color('lightgreen400')};
   --db-primary-button-pressed-text-color: #{db-color('lightgreen400')};
