--- a/packages/styles/themes/display.scss
+++ b/packages/styles/themes/display.scss
@@ -12,7 +12,7 @@ $db-display-background-color: #213a7e;
   --db-darker-background-color: #{db-color('blue800')};
   --db-primary-text-color: #{db-color('white')};
   --db-secondary-text-color: #{db-color('blue200')};
-  --db-disabled-text-color: #3e68ac;
+  --db-disabled-text-color: #5072a8;
   --db-border-color: #3e5c90;
   --db-loud-border-color: #{db-color('blue100')};
 
@@ -33,6 +33,7 @@ $db-display-background-color: #213a7e;
   --db-primary-button-background-color: #{db-color('white')};
   --db-primary-button-hover-background-color: #{db-color('blue100')};
   --db-primary-button-pressed-background-color: #{db-color('blue200')};
+  --db-primary-button-disabled-background-color: #{mix(#fff, #213a7e, 20%)};
   --db-primary-button-text-color: #{db-color('black')};
   --db-primary-button-hover-text-color: #{db-color('black')};
   --db-primary-button-pressed-text-color: #{db-color('black')};
