--- a/packages/styles/themes/s-bahn.scss
+++ b/packages/styles/themes/s-bahn.scss
@@ -93,6 +93,7 @@ $db-s-bahn-color: #038531;
   --db-primary-button-background-color: #{db-color('white')};
   --db-primary-button-hover-background-color: #{mix(db-color('coolgray100'), db-color('green100'))};
   --db-primary-button-pressed-background-color: #{mix(db-color('coolgray200'), db-color('green200'))};
+  --db-primary-button-disabled-background-color: #{mix(#fff, $db-s-bahn-color, 20%)};
   --db-primary-button-text-color: #{db-color('black')};
   --db-primary-button-hover-text-color: #{db-color('black')};
   --db-primary-button-pressed-text-color: #{db-color('black')};
